# -*- coding: utf-8 -*-
[metadata]
name = unet_v2
summary = Cercospora Leaf Spot segmentation
description-file =
    README.md
author = Adnane
author-email = adnane.aitoussayer@etud.univ-angers.fr
version = 0.0.1
license = MIT
home-page = https://github.com/adnaneds/unet_v2
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    unet_v2

[entry_points]
deepaas.v2.model =
    unet_v2 = unet_v2.api
